# itech_usb_serial

./: .gitignore  README.md  readme.md
pcb/: PCB1.PcbDoc  Sheet1.SchDoc  USB_SERIAL.PrjPcb
python/: .gitignore  LICENSE  PUBLISHING.md  README.md  itech.py  pyproject.toml
python/src/itech_serial/: __init__.py  it6800.py  it8500.py  itech_serial.py
python/tests/: test_itech.py
releases/: 2021-01-06_itech_usb_serial_RevA BOM.xlsx  2021-01-06_itech_usb_serial_RevA Pick Place.csv  2021-01-06_itech_usb_serial_RevA.step
