[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itech_serial"
authors = [{name = "Matthew Mets", email = "matt@blinkinlabs.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
keywords = ["itech", "it6800", "it6811", "it8500", "it8511"]
dependencies = ["pyserial"]

[project.urls]
Home = "https://github.com/blinkinlabs/itech_usb_serial"
